--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,5 @@ Authors@R: person("First", "Last", email = "first.last@example.com", role = c("a
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
+URL: https://github.com/hui-tony-zk/distanceParallel
+BugReports: https://github.com/hui-tony-zk/distanceParallel/issues
