--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,14 +3,17 @@ Title: Creates distance matrix in parallel
 Version: 0.0.0.9000
 Authors@R: person("Tony", "Hui", email = "tony.hui@ubc.ca", role = c("aut", "cre"))
 Description: dist(x) in base R only operates on one thread. Using the foreach package, we can now create distance matrixes in parallel.
-Depends:
+Depends: 
     R (>= 3.2.2)
 License: MIT + file LICENSE
 LazyData: true
-Imports:
+Imports: 
     doMC,
     parallel,
     foreach,
     tidyr
 RoxygenNote: 5.0.1
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
